--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "chai": "^4.3.7",
     "mocha": "^10.2.0",
     "supertest": "^6.3.3"
+  },
+  "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.19.6"
   }
 }
