--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "supertest": "^6.3.3"
   },
   "dependencies": {
-    "@babel/plugin-transform-runtime": "^7.19.6"
+    "@babel/plugin-transform-runtime": "^7.19.6",
+    "dotenv": "^16.0.3",
+    "faker": "^5.5.3",
+    "lorem": "^0.4.0"
   }
 }
