--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --timeout 5000"
+    "test": "mocha --timeout 5000",
+    "test-html": "mocha --timeout 5000 --reporter mochawesome"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,7 @@
     "@babel/register": "^7.18.9",
     "chai": "^4.3.7",
     "mocha": "^10.2.0",
+    "mochawesome": "^7.1.3",
     "supertest": "^6.3.3"
   },
   "dependencies": {
